@@ -148,29 +148,29 @@ Benet 2
 0,0,91.000000,0.000000,1.530000,69.000000,0.290000
 Church 2
 ---
-1,0.004560,0.010000,0
-3,0.002631,0.990000,0
-5,0.002073,0.080000,0
-15,0.017100,0.990000,0
-9,0.001954,0.510000,0
-7,0.001267,0.360000,0
-11,0.001954,0.000000,0
-14,0.004275,0.000000,0
-19,-0.002533,0.000000,0
-22,-0.001140,0.000000,0
-1,-0.004560,0.010000,0
-3,-0.002631,0.990000,0
-5,-0.002073,0.080000,0
-15,-0.017100,0.990000,0
-9,-0.001954,0.510000,0
-7,-0.001267,0.360000,0
-11,-0.001954,0.000000,0
-14,-0.004275,0.000000,0
-19,0.002533,0.000000,0
-22,0.001140,0.000000,0
-0.700000,0,20.000000,0.800000,27.500000,1,6.280000,10.000000
-0.000100,1.000000,68.400002,1,10584.000000,0.250000
-0,1,95.000000,6.000000,1.270000,63.000000,0.780000
+3,0.006408,0.990000,0
+3,0.003204,0.990000,0
+4,0.002314,0.160000,0
+5,0.001893,0.530000,0
+7,0.001851,0.790000,0
+8,0.001735,0.480000,0
+11,0.002380,0.820000,1
+2,0.000744,0.180000,1
+19,-0.003085,0.600000,0
+22,-0.001388,0.000000,0
+3,-0.006408,0.990000,0
+3,-0.003204,0.990000,0
+4,-0.002314,0.160000,0
+5,-0.001893,0.530000,0
+7,-0.001851,0.790000,0
+8,-0.001735,0.480000,0
+11,-0.002380,0.820000,1
+2,-0.000744,0.180000,1
+19,0.003085,0.600000,0
+22,0.001388,0.000000,0
+0.700000,0,24.549999,0.000000,22.200001,1,6.670000,10.000000
+0.000000,1.000000,83.300003,0,0.000000,0.000000
+0,0,71.000000,6.000000,3.260000,88.000000,0.600000
 JS 2
 ---
 8,0.006863,0.660000,0
